--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     </properties>
 
     <dependencyManagement>
+
         <dependencies>
             <!-- Logging -->
             <dependency>
@@ -28,6 +29,7 @@
                 <artifactId>logback-classic</artifactId>
                 <version>${logback.version}</version>
             </dependency>
+
             <!-- Spring context -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -35,6 +37,22 @@
                 <version>${spring.version}</version>
             </dependency>
         </dependencies>
+
     </dependencyManagement>
+
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <target>${java.version}</target>
+                    <source>${java.version}</source>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
