--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <logback.version>1.2.3</logback.version>
         <spring.version>5.0.5.RELEASE</spring.version>
         <java.version>8</java.version>
+        <annotation-api-version>1.3.2</annotation-api-version>
 
     </properties>
 
@@ -36,6 +37,14 @@
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
             </dependency>
+
+            <!--annotation api-->
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${annotation-api-version}</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
